CruiseControl Status Menu Release Notes

Changes listed by release.

CCMenu 1.0.0

* Improved URL handling in 'add projects' dialog
* Now automatically determines full URL in 'add projects' dialog


CCMenu 0.9.5

* Now projects already monitored are greyed out in 'add project' dialog
* Server URL combo box now remembers all URLs seen before
* Fixed bug related to classic reporting app URLs
* Fixed bug that caused project window not to update when removing all projects


CCMenu 0.9.4

* Added autoupdate using the Sparkle framework
* Now opening the preferences panel when no projects are configured
* Now showing a meaningful message when server does not provide web URLs
* Fixed key binding bug (#1779159), can also close/miniaturize windows now
* Fixed bug that would prevent monitor from running on first startup


CCMenu 0.9.3

* Now showing a grey icon when project status unavailable
* Project with unknown status is treated as if status was failure
* Completely reworked server polling to be asynchronous and more resilient
* Added workaround for broken URLs provided by CruiseControl.rb
* Added remaining icons


CCMenu 0.9.2

* Version number displayed on project preferences pane
* Version number displayed in finder
* Fixed window ordering bug (#1777599) 


CCMenu 0.9.1

* Choose server combo box doesn't autocomplete
* Fixed CC.NET filename bug (#1775460)
* Fixed missing Growl notifications bug


CCMenu 0.9

* Basic version, release candidate for first public release.