@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>1.0.0d2</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0d2</string>
+	<string>1.0.0d3</string>
 	<key>LSUIElement</key>
 	<string>1</string>
 	<key>NSMainNibFile</key>
